--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <main class="container">
     <section class="hero">
-      <h1>Share & discover geotagged community knowledge Mohesh</h1>
+      <h1>Share & discover geotagged community knowledge Akil</h1>
       <p class="muted">Search by place, category, or knowledge type and explore on an interactive map.</p>
 
       <form id="landing-search" class="card search-card">
